--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ mongoengine==0.29.1
 python-dotenv==1.1.1
 certifi==2024.07.04
 
-# ML LIBRARIES (COMPATIBLE WITH PYTHON 3.10 + TENSORFLOW 2.12)
+# ML LIBRARIES
 numpy==1.23.5
 pandas==1.5.3
 scikit-learn==1.2.2
@@ -20,4 +20,3 @@ tensorflow-cpu==2.12.0
 h5py==3.8.0
 
 gunicorn==23.0.0
-    
